k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s
  labels:
    app: k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s
  template:
    metadata:
      labels:
        app: k8s
    spec:
      containers:
        - name: k8s
          image: ghcr.io/sayjeyhi/presentation-k8s:latest
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '250m'
              memory: '256Mi'
