k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  selector:
    app: k8s
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
