k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-new"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: ""
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k8s.catshoulder.dev
      secretName: k8s-tls-v2
  rules:
    - host: k8s.catshoulder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-service
                port:
                  number: 8080
